# infra

./: .envrc  .gitattributes  .gitignore  .markdownlint.yaml  .mcp_servers.json  .pre-commit-config.yaml  .renovaterc  .secrets.tmpl  .yamlfix.toml  .zizmor.yml  8uaslmgnhjognpeq55pciclcjj1lpmac  AGENTS.md  CLAUDE.md  Dockerfile.ansible  README.md  flake-versions.yaml  flake.nix  lp77lefphrjifcg0ottpvorifq3cqnsr  manifest  v4dritukharh2dgbrlmucrgjhmgrpso1.darc
.claude/skills/renovate-eval/: .gitignore  README.md  SKILL.md  action.yaml  evaluate.sh  pyproject.toml  renovate_eval.py
.claude/skills/renovate-eval/lib/: __init__.py  agent_runner.py  auditor.py  check_ci.py  common.py  common.sh  evaluator.py  fetch_pr_data.py  pr_status.py  render.py  validate.py
.claude/skills/renovate-eval/prompts/: auditor.md  eval-data-schema.md  evaluator.md  report-format.md  revision.md
.claude/skills/renovate-eval/scripts/: check-ci-status.sh  fetch-pr-data.sh  init.sh  list-renovate-prs.sh  run-auditor.sh  run-evaluator.sh  validate-report.sh
.claude/skills/renovate-eval/tests/: common.bats  conftest.py  run-auditor.bats  test_action.py  test_agent_runner.py  test_auditor.py  test_check_ci.py  test_common.py  test_evaluator.py  test_fetch_pr_data.py  test_pr_status.py  test_render.py  test_validate.py  validate-report.bats
.claude/skills/renovate-eval/tests/fixtures/bad-meta-label/: eval-meta.json  eval-report.md
.claude/skills/renovate-eval/tests/fixtures/bare-references/: eval-report.md
.claude/skills/renovate-eval/tests/fixtures/missing-sections/: eval-meta.json  eval-report.md
.claude/skills/renovate-eval/tests/fixtures/valid-report/: eval-evidence.md
ansible/galaxy/collections/ansible_collections/artis3n/tailscale/: FILES.json  Makefile  (+3 more)
(+2010 files in other folders)
